HTML,CSS_complete

--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
       <li class="buttonList__btn color" data-color="yellow">Yellow</li>
       <li class="buttonList__btn color" data-color="pink">Pink</li>
     </ul>
-    <div class="clothesList"></div>
+    <ul class="clothesList">
+      <li class="clothesList_item"></li>
+      <li class="clothesList_item"></li>
+      <li class="clothesList_item"></li>
+      <li class="clothesList_item"></li>
+      <li class="clothesList_item"></li>
+      <li class="clothesList_item"></li>
+      <li class="clothesList_item"></li>
+      <li class="clothesList_item"></li>
+      <li class="clothesList_item"></li>
+      <li class="clothesList_item"></li>
+    </ul>
   </div>
 </body>
 
