--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <img src="/img/logo.png" alt="">
     </div>
     <ul class="buttonList">
-      <li class="buttonList__btn clothes" data-type="tshirts">
+      <li class="buttonList__btn clothes" data-type="tshirt">
         <img src="/img/blue_t.png" alt="TshirtsBtn">
       </li>
       <li class="buttonList__btn clothes" data-type="pants">
         <img src="/img/blue_p.png" alt="pantsBtn">
       </li>
-      <li class="buttonList__btn clothes" data-type="skirts">
+      <li class="buttonList__btn clothes" data-type="skirt">
         <img src="/img/blue_s.png" alt="skirtIcon">
       </li>
       <li class="buttonList__btn color" data-color="blue">Blue</li>
@@ -30,16 +30,6 @@
       <li class="buttonList__btn color" data-color="pink">Pink</li>
     </ul>
     <ul class="clothesList">
-      <li class="clothesList_item"></li>
-      <li class="clothesList_item"></li>
-      <li class="clothesList_item"></li>
-      <li class="clothesList_item"></li>
-      <li class="clothesList_item"></li>
-      <li class="clothesList_item"></li>
-      <li class="clothesList_item"></li>
-      <li class="clothesList_item"></li>
-      <li class="clothesList_item"></li>
-      <li class="clothesList_item"></li>
     </ul>
   </div>
 </body>
