--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
   <div class="container">
     <div class="logo">
-      <img src="/img/logo.png" alt="">
+      <img src="./img/logo.png" alt="">
     </div>
     <ul class="buttonList">
       <li class="buttonList__btn clothes" data-type="tshirt">
-        <img src="/img/blue_t.png" alt="TshirtsBtn">
+        <img src="./img/blue_t.png" alt="TshirtsBtn">
       </li>
       <li class="buttonList__btn clothes" data-type="pants">
-        <img src="/img/blue_p.png" alt="pantsBtn">
+        <img src="./img/blue_p.png" alt="pantsBtn">
       </li>
       <li class="buttonList__btn clothes" data-type="skirt">
-        <img src="/img/blue_s.png" alt="skirtIcon">
+        <img src="./img/blue_s.png" alt="skirtIcon">
       </li>
       <li class="buttonList__btn color" data-color="blue">Blue</li>
       <li class="buttonList__btn color" data-color="yellow">Yellow</li>
